--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "lottie-web": "^5.7.14",
     "marked": "^3.0.8",
     "next": "^10.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-parallax": "^3.3.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
