--- a/package.json
+++ b/package.json
@@ -4,6 +4,21 @@
   "description": "Datatangente website",
   "main": "next.config.js",
   "dependencies": {
+    "@bit/mui-org.material-ui.circular-progress": "^4.9.10",
+    "@bit/mui-org.material-ui.dialog": "^4.9.10",
+    "@bit/mui-org.material-ui.dialog-actions": "^4.9.10",
+    "@bit/mui-org.material-ui.dialog-content": "^4.9.10",
+    "@bit/mui-org.material-ui.dialog-content-text": "^4.9.10",
+    "@bit/mui-org.material-ui.dialog-title": "^4.9.10",
+    "@bit/mui-org.material-ui.grid": "^4.9.10",
+    "@bit/mui-org.material-ui.styles": "^4.9.10",
+    "@bit/mui-org.material-ui.typography": "^4.9.10",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@glidejs/glide": "^3.4.1",
     "dompurify": "^2.3.3",
     "emailjs-com": "^3.2.0",
     "imagesloaded": "^4.1.4",
@@ -18,7 +33,6 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -33,5 +47,14 @@
   "bugs": {
     "url": "https://github.com/gonXalex/datatangente/issues"
   },
-  "homepage": "https://github.com/gonXalex/datatangente#readme"
+  "homepage": "https://github.com/gonXalex/datatangente#readme",
+  "keywords": [
+    "datatangente",
+    "data",
+    "tangente",
+    "web",
+    "software",
+    "solutions",
+    "programming"
+  ]
 }
