--- a/package.json
+++ b/package.json
@@ -13,6 +13,25 @@
     "@bit/mui-org.material-ui.grid": "^4.9.10",
     "@bit/mui-org.material-ui.styles": "^4.9.10",
     "@bit/mui-org.material-ui.typography": "^4.9.10",
+    "@bit/mui-org.material-ui.backdrop": "4.9.10",
+    "@bit/mui-org.material-ui.fade": "4.9.10",
+    "@bit/mui-org.material-ui.internal.capitalize": "4.9.10",
+    "@bit/mui-org.material-ui.internal.transitions": "4.9.10",
+    "@bit/mui-org.material-ui.internal.types": "4.9.10",
+    "@bit/mui-org.material-ui.modal": "4.9.10",
+    "@bit/mui-org.material-ui.paper": "4.9.10",
+    "@bit/mui-org.material-ui.internal.create-chained-function": "4.9.10",
+    "@bit/mui-org.material-ui.internal.get-scrollbar-size": "4.9.10",
+    "@bit/mui-org.material-ui.internal.owner-window": "4.9.10",
+    "@bit/mui-org.material-ui.internal.use-event-callback": "4.9.10",
+    "@bit/mui-org.material-ui.portal": "4.9.10",
+    "@bit/mui-org.material-ui.colors": "4.9.10",
+    "@bit/mui-org.material-ui.internal.use-fork-ref": "4.9.10",
+    "@bit/mui-org.material-ui.internal.overridable-component": "4.9.10",
+    "@bit/mui-org.material-ui.internal.require-prop-factory": "4.9.10",
+    "@bit/mui-org.material-ui.internal.owner-document": "4.9.10",
+    "@bit/mui-org.material-ui.internal.set-ref": "4.9.10",
+    "@babel/helper-validator-identifier": "^7.14.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
