--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@glidejs/glide": "^3.4.1",
+    "@types/node": "^16.11.6",
     "dompurify": "^2.3.3",
     "emailjs-com": "^3.2.0",
     "imagesloaded": "^4.1.4",
