--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-parallax": "^3.3.0",
+    "react-use": "^17.4.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {
