--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
 
+# enviroment variables
+.env.*
+
 # next.js build output
 .next
 
