--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@glidejs/glide": "^3.4.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "^16.11.6",
     "dompurify": "^2.3.3",
     "emailjs-com": "^3.2.0",
